<resources>
    <string name="app_name">ServerShit</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No notes found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter your note!</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="single">Single?</string>
    <string name="set">Set</string>
    <string name="get">Get</string>
    <string name="notes">Notes</string>
    <string name="new_note">New Note</string>
    <string name="sharedPreferences">Shared Preferences</string>
    <string name="broadcast_receiver">BroadCast Receiver</string>
    <string name="broadcast_text">Turn on/off your bluetooth to see what happened</string>
    <string name="title">title</string>
    <string name="retrofit">RetroFit</string>
</resources>
